--- a/requirements.txt
+++ b/requirements.txt
@@ -7,10 +7,12 @@ databricks-sql-connector==4.1.4
 debugpy==1.8.17
 decorator==5.2.1
 et-xmlfile==2.0.0
+exceptiongroup==1.3.0
 executing==2.2.1
 findspark==2.0.1
 idna==3.11
 importlib-metadata==8.5.0
+iniconfig==2.1.0
 ipykernel==6.29.5
 ipython==8.12.3
 jedi==0.19.2
@@ -28,6 +30,7 @@ parso==0.8.5
 pexpect==4.9.0
 pickleshare==0.7.5
 platformdirs==4.3.6
+pluggy==1.5.0
 prompt-toolkit==3.0.52
 psutil==7.1.2
 ptyprocess==0.7.0
@@ -37,6 +40,7 @@ pyarrow==17.0.0
 pygments==2.19.2
 PyJWT==2.9.0
 pyspark==3.5.1
+pytest==8.3.5
 python-dateutil==2.9.0.post0
 pytz==2025.2
 pyzmq==27.1.0
@@ -44,6 +48,7 @@ requests==2.32.4
 six==1.17.0
 stack-data==0.6.3
 thrift==0.20.0
+tomli==2.3.0
 tornado==6.4.2
 traitlets==5.14.3
 typing-extensions==4.13.2
